added homepage image and added custom styling to home page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+    background: url('/media/closeup-man-playing-bass-guitar.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: 'Audiowide', cursive;
 }
 
 /* from Bulma */
@@ -23,6 +23,7 @@ body {
 
 .logo-font {
     text-transform: uppercase;
+    color: #9469d9;
 }
 
 .main-logo-link {
@@ -50,8 +51,8 @@ body {
     color: white;
 }
 
-.text-black {
-    color: #000 !important;
+.text-white {
+    color: white !important;
 }
 
 .border-black {
