--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,8 +12,9 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+            <div class="col-6"></div>
+            <div class="col-6 my-auto text-right">
+                <h1 class="display-4 logo-font text-white">
                     New items added!
                 </h1>
                 <div class="my-5">
