prelim category and product json data added

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,9 @@
                 Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="guitars-link">
-                <a href="" class="dropdown-item">60s</a>
-                <a href="" class="dropdown-item">70s</a>
-                <a href="" class="dropdown-item">80s</a>
-                <a href="" class="dropdown-item">Modern</a>
+                <a href="" class="dropdown-item">50s and 60s Guitars</a>
+                <a href="" class="dropdown-item">70s Guitars</a>
+                <a href="" class="dropdown-item">80s Guitars</a>
                 <a href="" class="dropdown-item">All Guitars</a>
             </div>
         </li>
@@ -30,10 +29,9 @@
                 Bass Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="guitars-link">
-                <a href="" class="dropdown-item">60s</a>
-                <a href="" class="dropdown-item">70s</a>
-                <a href="" class="dropdown-item">80s</a>
-                <a href="" class="dropdown-item">Modern</a>
+                <a href="" class="dropdown-item">60s Bass Guitars</a>
+                <a href="" class="dropdown-item">70s Bass Guitars</a>
+                <a href="" class="dropdown-item">80s Bass Guitars</a>
                 <a href="" class="dropdown-item">All Bass Guitars</a>
             </div>
         </li>
@@ -43,8 +41,8 @@
                 Amplifiers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="amplifiers-link">
-                <a href="" class="dropdown-item">60s</a>
-                <a href="" class="dropdown-item">70s</a>
+                <a href="" class="dropdown-item">60s Amps</a>
+                <a href="" class="dropdown-item">70s Amps</a>
                 <a href="" class="dropdown-item">All Amplifiers</a>
             </div>
         </li>
