--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="guitars-link">
-                <a href="" class="dropdown-item">50s and 60s Guitars</a>
-                <a href="" class="dropdown-item">70s Guitars</a>
-                <a href="" class="dropdown-item">80s Guitars</a>
-                <a href="" class="dropdown-item">All Guitars</a>
+                <a href="{% url 'products' %}?category=50s_60s_guitars" class="dropdown-item">50s and 60s Guitars</a>
+                <a href="{% url 'products' %}?category=70s_guitars" class="dropdown-item">70s Guitars</a>
+                <a href="{% url 'products' %}?category=80s_guitars" class="dropdown-item">80s Guitars</a>
+                <a href="{% url 'products' %}?category=50s_60s_guitars,70s_guitars,80s_guitars" class="dropdown-item">All Guitars</a>
             </div>
         </li>
 
@@ -29,10 +29,10 @@
                 Bass Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="guitars-link">
-                <a href="" class="dropdown-item">60s Bass Guitars</a>
-                <a href="" class="dropdown-item">70s Bass Guitars</a>
-                <a href="" class="dropdown-item">80s Bass Guitars</a>
-                <a href="" class="dropdown-item">All Bass Guitars</a>
+                <a href="{% url 'products' %}?category=60s_bass_guitars" class="dropdown-item">60s Bass Guitars</a>
+                <a href="{% url 'products' %}?category=70s_bass_guitars" class="dropdown-item">70s Bass Guitars</a>
+                <a href="{% url 'products' %}?category=80s_bass_guitars" class="dropdown-item">80s Bass Guitars</a>
+                <a href="{% url 'products' %}?category=60s_bass_guitars,70s_bass_guitars,80s_bass_guitars" class="dropdown-item">All Bass Guitars</a>
             </div>
         </li>
 
@@ -41,9 +41,9 @@
                 Amplifiers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="amplifiers-link">
-                <a href="" class="dropdown-item">60s Amps</a>
-                <a href="" class="dropdown-item">70s Amps</a>
-                <a href="" class="dropdown-item">All Amplifiers</a>
+                <a href="{% url 'products' %}?category=60s_amps" class="dropdown-item">60s Amps</a>
+                <a href="{% url 'products' %}?category=70s_amps" class="dropdown-item">70s Amps</a>
+                <a href="{% url 'products' %}?category=60s_amps,70s_amps" class="dropdown-item">All Amplifiers</a>
             </div>
         </li>
 
@@ -52,10 +52,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
