--- a/static/css/base.css
+++ b/static/css/base.css
@@ -262,6 +262,11 @@ a.category-badge > span.badge:hover {
     border-radius: 0;
 }
 
+.btn-wishlist {
+    background-color: white;
+    border-style: none;
+}
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
