--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,7 +52,7 @@
                         <form class="form" action="{% url 'add_to_wishlist' product.id %}" method="POST">
                             {% csrf_token %}
                             <span class="icon"><i class="fa-regular fa-heart"></i></span>
-                            <input type="submit" class="btn-wishlist" value="Add to Wishlist">
+                            <input type="submit" class="btn-wishlist" value="Add to Wishlist" data-item_id="{{ product.id }}" id="{{ product.id }}">
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </form>
                     </small>
