--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -33,7 +33,10 @@
                 </form>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Order History</p>
+                <div class="row">
+                    <div class="col-4"><p class="text-muted">Order History</p></div>
+                    <div class="col-8"><p class="text-muted text-lg-right" href="">Add Review</p></div>
+                </div>                
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -68,6 +71,59 @@
                                     <td>${{ order.grand_total }}</td>
                                 </tr>
                             {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <p class="text-muted"><a href="{% url 'wishlist' %}">My Wishlist</a></p>
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr></tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <img class="img-fluid rounded" src="" alt="image">
+                                </td>
+                                <td>
+                                    <p class="my-0"><strong>Name</strong></p>
+                                </td>
+                                <td>
+                                    <p class="my-0 small text-muted">SKU:</p>
+                                </td>
+                                <td>
+                                    <p class="my-0">Price</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <p class="text-muted"><a href="{% url 'reviews' %}">My Reviews</a></p>
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Product</th>
+                                <th>Date Written</th>
+                                <th>Review</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <img class="img-fluid rounded" src="" alt="image">
+                                </td>
+                                <td>
+                                    <p class="my-0"><strong>Name</strong></p>
+                                </td>
+                                <td>
+                                    <p class="my-0 small text-muted">Date</p>
+                                </td>
+                                <td>
+                                    <p class="my-0">Review</p>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
