add_review view  posting to database successfully. reviews view not funcational yet

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -78,7 +78,12 @@
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
-                            <tr></tr>
+                            <tr>
+                                <th></th>
+                                <th>Product</th>
+                                <th>SKU:</th>
+                                <th>Price</th>
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
