--- a/wishlist/templates/wishlist/confirmation.html
+++ b/wishlist/templates/wishlist/confirmation.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -15,12 +14,20 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
+                <hr>
+                <h2 class="logo-font mb-4">Delete</h2>
+                <hr>
+                <p>Are you sure you want to delete this item from your wishlist?</p>
+                <form method="POST" action="{% url 'delete_wishlist' wishlist_item.id %}">
+                    {% csrf_token %}
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'wishlist' %}">Cancel</a>
+                    <button class="btn btn-outline-black rounded-0" type="submit">Delete</button>
+                </form>
             </div>
         </div>
-
+        {% if wishlist_item %}
         <div class="row">
             <div class="col">
-                {% if wishlist_items %}
                 <div class="table-responsive rounded">
                     <table class="table table-sm table-borderless">
                         <thead class="text-black">
@@ -30,33 +37,25 @@
                                 <th scope="col">Price</th>
                             </tr>
                         </thead>
-
-                        {% for item in wishlist_items %}
                             <tr>
                                 <td class="p-3 w-25">
-                                    {% if item.product.image %}
-                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                    {% if wishlist_item.product.image %}
+                                    <img class="img-fluid rounded" src="{{ wishlist_item.product.image.url }}" alt="{{ wishlist_item.product.name }}">
                                     {% else %}
-                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ wishlist_item.product.name }}">
                                     {% endif %}
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                    <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                    <p class="my-0"><strong>{{ wishlist_item.product.name }}</strong></p>
+                                    <p class="my-0 small text-muted">SKU: {{ wishlist_item.product.sku|upper }}</p>
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">${{ item.product.price }}</p>
+                                    <p class="my-0">${{ wishlist_item.product.price }}</p>
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">{{ item.review }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <small class="ml-3">
-                                        <a class="text-danger" href="{% url 'delete_wishlist' item.id %}">Delete</a>
-                                    </small>
+                                    <p class="my-0">{{ wishlist_item.review }}</p>
                                 </td>
                             </tr>
-                        {% endfor %}
                             <tr>
                                 <td colspan="5" class="text-right">
                                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
@@ -65,7 +64,6 @@
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    
                                 </td>
                             </tr>
                         </table>
