--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <p class="text-muted">Please fill out the form below to submit your product review.</p>
-                <form method="POST" action="{% url 'add_review' %}" class="form mb-2" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'add_review' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
